tests/snapshots/parser__binary.snap
---
source: tests/parser.rs
expression: files
---
[
  {
    "path": "blob.bin",
    "hunks": [],
    "binary": true,
    "combined": false,
    "truncated": false
  }
]
