tests/snapshots/parser__combined_merge.snap
---
source: tests/parser.rs
expression: files
---
[
  {
    "path": "simple.txt",
    "hunks": [
      {
        "header": "@@@ -1,4 -1,4 +1,4 @@@",
        "old_start": 1,
        "old_lines": 4,
        "new_start": 1,
        "new_lines": 4,
        "lines": [
          {
            "kind": "context",
            "new_no": 1,
            "content": "alpha"
          },
          {
            "kind": "del",
            "content": "MAIN"
          },
          {
            "kind": "del",
            "content": "SIDE"
          },
          {
            "kind": "add",
            "new_no": 2,
            "content": "RESOLVED"
          },
          {
            "kind": "context",
            "new_no": 3,
            "content": "charlie"
          },
          {
            "kind": "context",
            "new_no": 4,
            "content": "delta"
          }
        ]
      }
    ],
    "binary": false,
    "combined": true,
    "truncated": false
  }
]
