tests/snapshots/parser__deleted.snap
---
source: tests/parser.rs
expression: files
---
[
  {
    "path": "gone.txt",
    "hunks": [
      {
        "header": "@@ -1 +0,0 @@",
        "old_start": 1,
        "old_lines": 1,
        "new_start": 0,
        "new_lines": 0,
        "lines": [
          {
            "kind": "del",
            "old_no": 1,
            "content": "to be deleted"
          }
        ]
      }
    ],
    "binary": false,
    "combined": false,
    "old_mode": "100644",
    "truncated": false
  }
]
