tests/snapshots/parser__modify.snap
---
source: tests/parser.rs
expression: files
---
[
  {
    "path": "simple.txt",
    "hunks": [
      {
        "header": "@@ -1,4 +1,4 @@",
        "old_start": 1,
        "old_lines": 4,
        "new_start": 1,
        "new_lines": 4,
        "lines": [
          {
            "kind": "context",
            "old_no": 1,
            "new_no": 1,
            "content": "alpha"
          },
          {
            "kind": "del",
            "old_no": 2,
            "content": "bravo"
          },
          {
            "kind": "add",
            "new_no": 2,
            "content": "BRAVO"
          },
          {
            "kind": "context",
            "old_no": 3,
            "new_no": 3,
            "content": "charlie"
          },
          {
            "kind": "context",
            "old_no": 4,
            "new_no": 4,
            "content": "delta"
          }
        ]
      }
    ],
    "binary": false,
    "combined": false,
    "truncated": false
  }
]
