tests/snapshots/parser__renames.snap
---
source: tests/parser.rs
expression: files
---
[
  {
    "path": "moved-verbatim.txt",
    "old_path": "with space.txt",
    "hunks": [],
    "binary": false,
    "combined": false,
    "truncated": false
  },
  {
    "path": "renamed.txt",
    "old_path": "renameme.txt",
    "hunks": [
      {
        "header": "@@ -1,3 +1,3 @@",
        "old_start": 1,
        "old_lines": 3,
        "new_start": 1,
        "new_lines": 3,
        "lines": [
          {
            "kind": "context",
            "old_no": 1,
            "new_no": 1,
            "content": "original content here"
          },
          {
            "kind": "del",
            "old_no": 2,
            "content": "second line"
          },
          {
            "kind": "add",
            "new_no": 2,
            "content": "SECOND LINE"
          },
          {
            "kind": "context",
            "old_no": 3,
            "new_no": 3,
            "content": "third line"
          }
        ]
      }
    ],
    "binary": false,
    "combined": false,
    "truncated": false
  }
]
